environments/prod/penpot/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot-route
  namespace: penpot
  labels:
    app.kubernetes.io/name: penpot
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "design.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: penpot-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
